[gd_scene load_steps=5 format=3 uid="uid://dymt1mo206mve"]

[ext_resource type="Script" path="res://scenes/settings/Settings.gd" id="1_h3v5u"]
[ext_resource type="PackedScene" uid="uid://cal70qi63pfq8" path="res://scenes/settings/UISettingCheckbox.tscn" id="2_3cg6v"]
[ext_resource type="PackedScene" uid="uid://dhrqfjuc8wi8a" path="res://scenes/settings/UISettingSlider.tscn" id="3_d262b"]
[ext_resource type="Theme" uid="uid://bpgjohkfj7o1s" path="res://scenes/settings/default_settings_theme.tres" id="4_kafsc"]

[node name="SettingsMenu" type="Panel"]
theme = ExtResource("4_kafsc")
script = ExtResource("1_h3v5u")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(350, 300)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.278431)
theme_override_constants/shadow_outline_size = 2
theme_override_constants/line_spacing = 20
theme_override_font_sizes/font_size = 25
text = "Settings"
vertical_alignment = 1

[node name="Close" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_font_sizes/font_size = 13
text = "Close"

[node name="TabContainer" type="TabContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Video" type="MarginContainer" parent="VBoxContainer/TabContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/TabContainer/Video"]
layout_mode = 2

[node name="Fullscreen" parent="VBoxContainer/TabContainer/Video/VBoxContainer" instance=ExtResource("2_3cg6v")]
layout_mode = 2

[node name="Label" parent="VBoxContainer/TabContainer/Video/VBoxContainer/Fullscreen" index="0"]
text = "Fullscreen"

[node name="VSync" parent="VBoxContainer/TabContainer/Video/VBoxContainer" instance=ExtResource("2_3cg6v")]
layout_mode = 2

[node name="Label" parent="VBoxContainer/TabContainer/Video/VBoxContainer/VSync" index="0"]
text = "VSync"

[node name="Audio" type="MarginContainer" parent="VBoxContainer/TabContainer"]
visible = false
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/TabContainer/Audio"]
layout_mode = 2

[node name="MainVolume" parent="VBoxContainer/TabContainer/Audio/VBoxContainer" instance=ExtResource("3_d262b")]
layout_mode = 2

[node name="Label" parent="VBoxContainer/TabContainer/Audio/VBoxContainer/MainVolume" index="0"]
text = "Volume"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/TabContainer/Audio/VBoxContainer"]
layout_mode = 2
theme = ExtResource("4_kafsc")

[node name="UIVolume" parent="VBoxContainer/TabContainer/Audio/VBoxContainer" instance=ExtResource("3_d262b")]
layout_mode = 2

[node name="Label" parent="VBoxContainer/TabContainer/Audio/VBoxContainer/UIVolume" index="0"]
text = "UI Volume"

[node name="BGVolume" parent="VBoxContainer/TabContainer/Audio/VBoxContainer" instance=ExtResource("3_d262b")]
layout_mode = 2

[node name="Label" parent="VBoxContainer/TabContainer/Audio/VBoxContainer/BGVolume" index="0"]
text = "BG Volume"

[node name="Controls" type="MarginContainer" parent="VBoxContainer/TabContainer"]
visible = false
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/TabContainer/Controls"]
layout_mode = 2

[node name="MouseSensitivity" parent="VBoxContainer/TabContainer/Controls/VBoxContainer" instance=ExtResource("3_d262b")]
layout_mode = 2

[node name="Label" parent="VBoxContainer/TabContainer/Controls/VBoxContainer/MouseSensitivity" index="0"]
text = "Mouse Sensitivity"

[node name="HSlider" parent="VBoxContainer/TabContainer/Controls/VBoxContainer/MouseSensitivity" index="1"]
max_value = 0.3
step = 0.01

[node name="StickSensitivity" parent="VBoxContainer/TabContainer/Controls/VBoxContainer" instance=ExtResource("3_d262b")]
layout_mode = 2

[node name="Label" parent="VBoxContainer/TabContainer/Controls/VBoxContainer/StickSensitivity" index="0"]
text = "Stick Sensitivity"

[node name="HSlider" parent="VBoxContainer/TabContainer/Controls/VBoxContainer/StickSensitivity" index="1"]
max_value = 300.0

[connection signal="pressed" from="VBoxContainer/HBoxContainer/Close" to="." method="_on_close_pressed"]
[connection signal="toggled" from="VBoxContainer/TabContainer/Video/VBoxContainer/Fullscreen" to="." method="_on_fullscreen_toggled"]
[connection signal="toggled" from="VBoxContainer/TabContainer/Video/VBoxContainer/VSync" to="." method="_on_vsync_toggled"]
[connection signal="value_changed" from="VBoxContainer/TabContainer/Audio/VBoxContainer/MainVolume" to="." method="_on_main_volume_value_changed"]
[connection signal="value_changed" from="VBoxContainer/TabContainer/Audio/VBoxContainer/UIVolume" to="." method="_on_ui_volume_value_changed"]
[connection signal="value_changed" from="VBoxContainer/TabContainer/Audio/VBoxContainer/BGVolume" to="." method="_on_bg_volume_value_changed"]
[connection signal="value_changed" from="VBoxContainer/TabContainer/Controls/VBoxContainer/MouseSensitivity" to="." method="_on_mouse_sensitivity_value_changed"]
[connection signal="value_changed" from="VBoxContainer/TabContainer/Controls/VBoxContainer/StickSensitivity" to="." method="_on_stick_sensitivity_value_changed"]

[editable path="VBoxContainer/TabContainer/Video/VBoxContainer/Fullscreen"]
[editable path="VBoxContainer/TabContainer/Video/VBoxContainer/VSync"]
[editable path="VBoxContainer/TabContainer/Audio/VBoxContainer/MainVolume"]
[editable path="VBoxContainer/TabContainer/Audio/VBoxContainer/UIVolume"]
[editable path="VBoxContainer/TabContainer/Audio/VBoxContainer/BGVolume"]
[editable path="VBoxContainer/TabContainer/Controls/VBoxContainer/MouseSensitivity"]
[editable path="VBoxContainer/TabContainer/Controls/VBoxContainer/StickSensitivity"]
